--- a/src/style.css
+++ b/src/style.css
@@ -6,14 +6,14 @@ body {
     margin: 0;
     padding: 0;
     width: 100vw;
-    height: auto;
+    height: 100vh;
 }
 
 main {
     display: flex;
     flex-direction: column;
     width: 100vw;
-    height: auto;
+    height: 100vh;
     padding: 0;
     margin: 0;
 
@@ -53,7 +53,57 @@ img.logo {
     width: 100%;
     height: auto;
     margin-top: 40px;
-
+}
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+header {
+    padding: 15px;
+    background-color: white;
+    box-shadow: 0 4px 9px -2px gray;
+}
+.logoMuro {
+    width: 50%;
+    height: auto;
+}
+.material-symbols-outlined {
+    width: 35px;
+    font-variation-settings:
+    'FILL' 0,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 48
+}
+.cerrar {
+    width: 35px;
+}
+footer {
+    width: 81vw;
+    padding: 15px;
+    background-color: white;
+    box-shadow: 0 -4px 9px -2px gray;
+}
+.footer {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center; 
+}
+.sectionMuro {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    object-fit: contain;
+    margin: 20px 20px 20px 20px;
+    padding: 0;
+    border: 1px solid #1B6FB6;
+    height: 100vh;
+    background-color: #64aff148;
+}
+.muro {
+    margin: 0;
+    flex-wrap: wrap;
 }
 
 img.girl {
@@ -199,7 +249,55 @@ a:hover {
     justify-content: space-between;
     align-items: center;
 }
-
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1; 
+    top:0;
+    margin:0;
+    width: 100vw; 
+    height: 100vh; 
+    overflow: auto;
+    background-color: #faf4e6; 
+    background-color: rgba(0,0,0,0.4);
+}
+.content-modal {
+    display: flex;
+    background-color: #faf4e6;
+    padding: 20px;
+    border: 5px solid #c6c5ca;
+    width: 80%;
+    flex-direction: column;
+}
+.cancel {
+    display: flex;
+    justify-content: flex-end;
+}
+.user-content {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+button.publish {
+    width: 20vw;
+    font-size: 15px;
+    font-family: 'Fira Sans Condensed', sans-serif;
+    border-radius: 30px;
+    background: #1B6FB6;
+    color: white;
+    margin: 0;
+}
+.newPost {
+    width: 95%;
+    height: 60px;
+}
+.comment {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    gap: 16px;
+}
 @media screen and (min-width:768px) {
     section {
         height: 100vh;
