--- a/src/style.css
+++ b/src/style.css
@@ -6,14 +6,14 @@ body {
     margin: 0;
     padding: 0;
     width: 100vw;
-    height: 100vh;
+    height: 100%;
 }
 
 main {
     display: flex;
     flex-direction: column;
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     padding: 0;
     margin: 0;
 
@@ -63,6 +63,9 @@ header {
     padding: 15px;
     background-color: white;
     box-shadow: 0 4px 9px -2px gray;
+    display: flex;
+    position:sticky;
+    top: 0;
 }
 .logoMuro {
     width: 50%;
@@ -79,31 +82,37 @@ header {
 .cerrar {
     width: 35px;
 }
-footer {
-    width: 81vw;
+
+.footer {
+    width: 80vw;
     padding: 15px;
     background-color: white;
     box-shadow: 0 -4px 9px -2px gray;
-}
-.footer {
     display: flex;
     justify-content: space-evenly;
-    align-items: center; 
+    align-items: center;
+   
 }
+footer{
+    bottom: 0;
+    position: fixed;
+}
+
 .sectionMuro {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    object-fit: contain;
     margin: 20px 20px 20px 20px;
     padding: 0;
     border: 1px solid #1B6FB6;
-    height: 100vh;
+    height: 80%;
     background-color: #64aff148;
 }
 .muro {
     margin: 0;
     flex-wrap: wrap;
+    width: 100%;
+    min-height: 100vh ;
 }
 
 img.girl {
@@ -298,6 +307,9 @@ button.publish {
     align-items: center;
     gap: 16px;
 }
+
+
+
 @media screen and (min-width:768px) {
     section {
         height: 100vh;
