--- a/src/style.css
+++ b/src/style.css
@@ -441,6 +441,12 @@ button.publish {
     justify-content: flex-start;
     align-items: center;
 }
+.publicacion {
+    display: none;
+}
+span.desktop {
+    display: none;
+}
 @media screen and (min-width:900px) {
     body {
         width: 100vw;
@@ -515,6 +521,12 @@ button.publish {
     .enlaces1 {
         font-size: 30px;
     }
+    .publicacion {
+        display: none;
+    }
+    /* .desktop {
+        display: none;
+    } */
     
 }
 
@@ -543,10 +555,12 @@ button.publish {
     nav{
         width: 100%;
         height: 100%;
+        display: flex;
+        justify-content: space-between;
     }
     img.logoMuro{
         width: 40%;
-        height: 100%;
+        height: 150%;
         size: 50px;
         
     }
@@ -661,5 +675,26 @@ button.publish {
     justify-content: space-between;
     align-items: center;
     width: 80%;
+    }
+    .hambur {
+        display: none;
+    }
+    .menu-navegacion {
+        display: block;
+    }
+    span.desktop {
+        width: 40%;
+        display: flex;
+        justify-content: space-around;
+        font-family: 'Fira Sans Condensed', sans-serif;
+        font-size: 20px;
+        color:#1B6FB6;
+        align-items: center;
+    }
+    .publicacion {
+        display: flex;
+    }
+    .menu-navegacion{
+        display: none;
     }
 }
