--- a/src/style.css
+++ b/src/style.css
@@ -48,6 +48,9 @@ section {
     flex-direction: column;
     margin: 20px 20px 20px 20px;
 }
+.logoMuro {
+    object-fit: contain;
+}
 
 img.logo {
     width: 100%;
@@ -118,11 +121,20 @@ footer{
     gap: 30px;
     padding: 0 0 70px 0;
 }
-
+.newPost {
+    resize: none;
+    width: 95%;
+    height:80px ;
+    border-radius: 10px;
+}
+.newPost::-webkit-scrollbar{
+    display: none;
+  }
+  
 .container-comment {
     background-color: #fbf6f6ee;
-    width: 90%;
-    height: auto;
+    width: 100%;
+    height: 50%;
     display: flex;
     justify-content: space-between;
     flex-direction: column;
@@ -259,6 +271,12 @@ button:active {
     border: none;  
 }
 
+.editarPost{
+    display: none;
+}
+
+
+
 .mensaje {
     font-size: 20px;
     font-family: 'Fira Sans Condensed', sans-serif;
@@ -343,7 +361,6 @@ a:hover {
     width: 100vw; 
     height: 100vh; 
     overflow: auto;
-    background-color: #faf4e6; 
     background-color: rgba(0,0,0,0.4);
 }
 .content-modal {
@@ -353,7 +370,22 @@ a:hover {
     border: 5px solid #c6c5ca;
     width: 80%;
     flex-direction: column;
+    border-radius: 20px;
+    
 }
+.container-comment {
+    background-color: #fbf6f6ee;
+    width: 90%;
+    height: auto;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
+    box-shadow: 4px 5px 20px rgb(120, 119, 119);
+    border-radius: 10px;
+    padding: 10px 0 0 0;
+}
+
 .cancel {
     display: flex;
     justify-content: flex-end;
@@ -377,10 +409,7 @@ button.publish {
     color: white;
     margin: 0;
 }
-.newPost {
-    width: 95%;
-    height: 60px;
-}
+
 .comment {
     display: flex;
     flex-direction: column;
@@ -502,6 +531,7 @@ span.desktop {
 
     }
 
+ 
     .form-register {
         width: 100%;
         height: 40px;
@@ -696,5 +726,28 @@ span.desktop {
     }
     .menu-navegacion{
         display: none;
+    }
+    .editarPost{
+        display:flex;
+        width:50%;
+        height: 30%;
+        padding: 20px;
+        background-color: white;
+    }
+    
+     .editarPost > div{
+        width: 50%;
+        justify-content: center;
+        align-items: center;
+        background-color: rgb(244 239 6 / 23%);
+        font-size: 25px;
+        padding: 15px 40px;
+        border-radius: 50px;
+    }
+    .publicarPost{
+    color:rgb(103, 103, 103);
+    }
+    .content-modal {
+        width: 80%;
     }
 }
